first path out attempt
